--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -139,3 +139,5 @@ ManualIPAddress=
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
 
+[/Script/OnlineSubsystemUtils.IpNetDriver]
+NetServerMaxTickRate=60
