--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -8,7 +8,7 @@ Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=
 LaunchOnTarget=
-StagingDirectory=(Path="")
+StagingDirectory=(Path="C:/Art/Unreal/HiveFiveTask/Build")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -93,14 +93,14 @@ bSkipMovies=False
 -IniSectionDenylist=StorageServers
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
-+MapsToCook=(FilePath="/Game/Menu")
-+MapsToCook=(FilePath="/Game/PlayLevel")
++MapsToCook=(FilePath="/Game/Maps/Menu")
++MapsToCook=(FilePath="/Game/Maps/PlayLevel")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Functions")
 +DirectoriesToAlwaysCook=(Path="/Interchange/gltf")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Materials")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Pipelines")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Utilities")
 PerPlatformBuildConfig=()
-PerPlatformTargetFlavorName=()
+PerPlatformTargetFlavorName=(("Android", "Android_ASTC"))
 PerPlatformBuildTarget=()
 
